Lots of changes -Added graphs to show -Added timescale buttons to graphs -Added price to show top right -Added active classes on the tabs where applicable -Chosen correct footer for respective pages -Probably more but I can't remember.....

--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -34,9 +34,9 @@
             <%= image_tag 'launch.png', class: "portfolio-image launch" %>
             <span class="positive content-headline-figure text-center">+50.83%</span>
           </div>
-          <div class="change-timescale">
+         <!--  <div class="change-timescale">
             <h4>1D <span class="selected">1W</span> 1M 1Y ALL</h4>
-          </div>
+          </div> -->
         </div>
         <!-- #################################### -->
         <div class="portfolio-value">
