--- a/app/views/shared/_slim_footer.html.erb
+++ b/app/views/shared/_slim_footer.html.erb
@@ -7,5 +7,5 @@
       <a href="#"><i class="fab fa-twitter"></i></a>
       <a href="#"><i class="fab fa-linkedin"></i></a>
     </div>
-  <div class="item item-right">Made at Le Wagon, Lisbon</div>
+  <div class="item item-right">Made at Le Wagon, Lisbon 🇵🇹</div>
 </div>
