--- a/app/views/shared/_navbar_croker_sign_up.html.erb
+++ b/app/views/shared/_navbar_croker_sign_up.html.erb
@@ -4,8 +4,12 @@
     <%= image_tag 'logo.png', class: "logo" %>
     <% end %>
     <div class="tabs">
-      <%= link_to 'Dashboard', dashboard_path, class: 'tab active', style: 'font-size: 20px' %>
-      <a href="#"><h2 class="tab">Buy/Sell</h2></a>
+      <%= link_to 'Dashboard', dashboard_path, class: 'tab', style: 'font-size: 20px' %>
+      <% if controller.class == CryptocurrenciesController && controller.action_name == 'index' %>
+      <%= link_to 'Buy/Sell', cryptocurrencies_path, class: 'tab active', style: 'font-size: 20px' %>
+      <% else %>
+      <%= link_to 'Buy/Sell', cryptocurrencies_path, class: 'tab', style: 'font-size: 20px' %>
+      <% end %>
     </div>
   </div>
   <div class="navbar-right">
