changed the logo on the grayed show page

--- a/app/views/cryptocurrencies/_grayed_show.html.erb
+++ b/app/views/cryptocurrencies/_grayed_show.html.erb
@@ -1,7 +1,7 @@
 <div class="overlay"></div>
 <div class="car-card-title">
   <div class="green-line">
-    <%= image_tag 'title_icon.png', class: "crypto-logo-show" %>
+    <%= image_tag 'logo.png', class: "crypto-logo-show" %>
   </div>
   <h3 class="title-show"></h3>
 </div>
