--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -14,9 +14,7 @@
         %>
         <% end %>
       </div>
-
-
-      <!-- Headers -->
+      <!-- Headers (COIN, PRICE, VALUE HELD) -->
       <div class="crypto-list-headers">
         <div class="product list-headers">
           <div class='list-inline product-controls product-body'>
@@ -54,15 +52,12 @@
 
     <!-- here starts the show page, that has the coin chart, buy/sell option, etc -->
     <div id="current_cryptocurrency" class="half-wrapper show" >
-
       <!-- Render the show page inside this DIV -->
       <% if @cryptocurrency %>
         <%= render 'cryptocurrencies/show', cryptocurrency: @cryptocurrency %>
       <% else %>
         <%= render 'cryptocurrencies/grayed_show' %>
       <% end %>
-
-
     </div>
   </div>
 </div>
