--- a/app/views/cryptocurrencies/_show.html.erb
+++ b/app/views/cryptocurrencies/_show.html.erb
@@ -8,7 +8,10 @@
 <div class="price-wrapper">
   <h3>$<%= @live_price %></h3>
 </div>
+<!-- Start of the chart  -->
 <div class="chart-wrapper">
+  <!-- Render the chart in this div -->
+  <%#= render 'cryptocurrencies/call_chart', cryptocurrency: @cryptocurrency %>
 </div>
 <!-- This div contains the timeframe selectors for the chart [1D, 1W, 1M, 1Y, Since Ever] -->
 <div class="timeframe-wrapper">
@@ -29,6 +32,7 @@
     </ul>
   </div>
 </div>
+<!-- Beggining of the BUY/SELL div -->
 <div class="buy-sell-container">
   <div class="buy-sell-tabs">
     <div class="buy-tab tab-selected text-center">
