--- a/app/views/cryptocurrencies/index.html.erb
+++ b/app/views/cryptocurrencies/index.html.erb
@@ -36,10 +36,9 @@
         <div class="product">
           <%= image_tag "#{crypto.ticker_code}.png", class: "product-image" %>
           <div class='product-body'>
-            <h3><%= crypto.ticker_name %></h3>
-            <p><%= crypto.ticker_code %></p>
+            <h4><%= crypto.ticker_name %> <span class="crypto-code"><%= crypto.ticker_code %></span></h4>
           </div>
-          <ul class="list-inline product-controls">
+          <ul class="list-inline product-controls price-values">
             <li>
               <%= "$#{number_with_delimiter(@live_prices[crypto.ticker_name][crypto.ticker_code].round(4), :delimeter => ",")}" %>
             </li>
