rank -made rank of top five coins display the right rank

--- a/app/views/cryptocurrencies/call_chart.html.erb
+++ b/app/views/cryptocurrencies/call_chart.html.erb
@@ -3,7 +3,7 @@
   <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
 
 
-<div id="chart-container" data-historical-prices="<%= @data.to_json %>" style="height: 330px; width: 600px;"></div>
+<div id="chart-container" data-historical-prices="<%= @data.to_json %>" style="height: 100%px; width: 600px;"></div>
 <div class="time-periods">
   <h4 id="one-day" class="btn btn-success time-button">1D</h4>
   <h4 id="one-week" class="btn btn-success time-button">1W</h4>
