--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -50,7 +50,7 @@
           </div>
           <div class="value-content">
             <%= image_tag 'coins.png', class: "portfolio-image coins" %>
-            <span class="content-headline-figure text-center">$634.50</span>
+            <span class="content-headline-figure text-center">$<%= @portfolio_value %></span>
           </div>
           <div class="change-timescale">
             <!-- Empty div to ensure border spacing -->
@@ -73,13 +73,13 @@
         <div class="stats-content">
           <div class="stats-entry">
             <div class="stats-title">
-              <h3>Number of Coins Held:</h3><h3>6</h3>
+              <h3>Number of Coins Held:</h3><h3><%= @number_of_coins %></h3>
             </div>
             <p>Total number of different coins held</p>
           </div>
           <div class="stats-entry">
             <div class="stats-title">
-              <h3>Total Trades:</h3><h3>22</h3>
+              <h3>Total Trades:</h3><h3><%= @number_of_trades %></h3>
             </div>
             <p>Total number of trades within this account</p>
           </div>
