--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -1,4 +1,10 @@
+.login-flex {
+  display: flex;
+  justify-content: space-around;
+}
+
 .login-wrapper {
+  margin-top: 30px;
   background-color: #ffffff;
   width: 350px;
   padding: 30px;
