--- a/app/views/cryptocurrencies/_grayed_show.html.erb
+++ b/app/views/cryptocurrencies/_grayed_show.html.erb
@@ -7,7 +7,7 @@
 </div>
 <!-- This is where we show the price of the coin -->
 <div class="price-wrapper">
-  <h3>$ 00.00</h3>
+  <h3>$--.--</h3>
 </div>
 <div class="chart-wrapper">
 </div>
@@ -15,11 +15,10 @@
 <div class="timeframe-wrapper">
   <div class="empty"></div>
   <ul class= "list-inline timeframe-list">
-    <li class="1d">1D</li>
-    <li class="1w selected">1W</li>
-    <li class="1m">1M</li>
-    <li class="1y">1Y</li>
-    <li class="all">All</li>
+    <li class="one-day"><button>1D</button></li>
+    <li class="one-week"><button>1W</button></li>
+    <li class="one-month"><button>1M</button></li>
+    <li class="one-year"><button>1Y</button></li>
   </ul>
 </div>
 <div class="balance-container">
