--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,17 +1,25 @@
-<!-- app/views/payments/new.html.erb -->
-<h1>Top Up of <%= humanized_money_with_symbol(@top_up.fiat_amount) %></h1>
-<%= form_tag top_up_payments_path(@top_up) do %>
-  <article>
-    <label class="amount">
-      <span>Amount: <%= humanized_money_with_symbol(@top_up.fiat_amount) %></span>
-    </label>
-  </article>
 
-  <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-    data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-    data-name="Top up my Croker account"
-    data-email="<%= current_user.email %>"
-    data-description="TopUp <%= humanized_money_with_symbol(@top_up.fiat_amount) %>"
-    data-amount="<%= @top_up.fiat_amount_cents %>"
-    data-currency="<%= @top_up.fiat_amount.currency %>"></script>
-<% end %>
+<div class="login-flex">
+  <div class="login-wrapper payment-flex">
+    <div class="cont">
+      <h2 class="text-center">Please confirm your top up of <%= humanized_money_with_symbol(@top_up.fiat_amount) %></h2>
+    </div>
+    <div class="cont">
+    <%= form_tag top_up_payments_path(@top_up) do %>
+      <article>
+        <label class="amount">
+          <span class="text-center">Amount: <%= humanized_money_with_symbol(@top_up.fiat_amount) %></span>
+        </label>
+      </article>
+
+      <script src="https://checkout.stripe.com/checkout.js" class="stripe-button btn-success"
+        data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+        data-name="Top up my Croker account"
+        data-email="<%= current_user.email %>"
+        data-description="TopUp <%= humanized_money_with_symbol(@top_up.fiat_amount) %>"
+        data-amount="<%= @top_up.fiat_amount_cents %>"
+        data-currency="<%= @top_up.fiat_amount.currency %>"></script>
+    <% end %>
+    </div>
+  </div>
+</div>
