--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,14 +7,14 @@
 
       <div class="form-inputs">
         <%= f.input :first_name,
-                    required: true,
+                    required: false,
                     autofocus: true ,
                     input_html: { autocomplete: "first_name" }%>
         <%= f.input :last_name,
-                    required: true,
+                    required: false,
                     input_html: { autocomplete: "last_name" }%>
         <%= f.input :country,
-                    required: true,
+                    required: false,
                     input_html: { autocomplete: "country" }%>
         <%= f.input :email,
                     required: true,
