--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
   <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
 </head>
 <body>
-  <% if current_user %>
+  <% if controller.class == PagesController && controller.action_name == 'home' %>
+
+  <% elsif current_user %>
   <%= render 'shared/navbar_croker_logged_in' %>
   <% else %>
   <%= render 'shared/navbar_croker_sign_up' %>
