Added png to some image_tags

--- a/app/views/cryptocurrencies/_show.html.erb
+++ b/app/views/cryptocurrencies/_show.html.erb
@@ -1,7 +1,7 @@
 
 <div class="title">
   <div class="title-icon">
-    <%= image_tag "#{@cryptocurrency.ticker_code}", class: "crypto-logo-show" %>
+    <%= image_tag "#{@cryptocurrency.ticker_code}.png", class: "crypto-logo-show" %>
   </div>
   <div class="title-header">
     <h2 style="padding-top: 9px; padding-bottom: 9px;"><%= @cryptocurrency.ticker_name %></h2>
