--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="landing-wrapper">
+<!-- <div class="landing-wrapper"> -->
   <div class="landing-row-wrapper">
 
     <!-- Navigation -->
