changed appearence and place of the facebook button

--- a/app/assets/stylesheets/components/_signin.scss
+++ b/app/assets/stylesheets/components/_signin.scss
@@ -24,3 +24,8 @@ width: 100%;
 #user_remember_me {
   margin-right: 5px;
 }
+
+.facebook-button {
+  border-bottom: 1px solid #EAEAEA;
+  padding: 20px;
+}
