Fixing css issues

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -235,15 +235,15 @@ a:focus {
     margin-top: 250px;
   }
 }
-.btn {
-  text-transform: uppercase;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
-  -webkit-transition: all 0.3s ease-in-out;
-  -moz-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
-  border-radius: 0;
-}
+// .btn {
+//   text-transform: uppercase;
+//   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+//   font-weight: 400;
+//   -webkit-transition: all 0.3s ease-in-out;
+//   -moz-transition: all 0.3s ease-in-out;
+//   transition: all 0.3s ease-in-out;
+//   border-radius: 0;
+// }
 .btn-default {
   border: 1px solid #42DCA3;
   color: #42DCA3;
