--- a/app/views/dashboards/dashboard.html.erb
+++ b/app/views/dashboards/dashboard.html.erb
@@ -7,7 +7,7 @@
           <h1 class="text-center">It looks like you don't have any coins...</h1>
           <%= image_tag 'sad_croker.png', class: "sad-croker"%>
           <h1>Let's change that shall we?</h1>
-          <a href="#" class="btn btn-success buy-coins">Buy Coins Now</a>
+          <%= link_to 'Buy Coins Now', cryptocurrencies_path, class: "btn btn-success buy-coins" %>
         </div>
       </div>
     </div>
