--- a/app/views/shared/_navbar_croker_logged_in.html.erb
+++ b/app/views/shared/_navbar_croker_logged_in.html.erb
@@ -20,7 +20,7 @@
   <div class="navbar-right">
     <div class="navbar-balances">
       <h4>Available Balance: <span id="available-balance"><%= humanized_money_with_symbol(current_user.fiat_balance) %></span></h4>
-      <h4>Portfolio Value: <span id="portfolio-value"><%= humanized_money_with_symbol(@portfolio_value) %></span></h4>
+      <h4>Portfolio Value: <span id="portfolio-value"><%= humanized_money_with_symbol(current_user.current_portfolio_value) %></span></h4>
     </div>
     <div class="btn-deposit">
       <%= link_to 'Deposit', new_top_up_path, class: "deposit btn btn-success" %>
