--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,201 +1,253 @@
-a {
-  color: #42DCA3;
-  -webkit-transition: all 0.2s ease-in-out;
-  -moz-transition: all 0.2s ease-in-out;
-  transition: all 0.2s ease-in-out;
-}
+// a {
+//   color: #42DCA3;
+//   -webkit-transition: all 0.2s ease-in-out;
+//   -moz-transition: all 0.2s ease-in-out;
+//   transition: all 0.2s ease-in-out;
+// }
 a:hover,
 a:focus {
   text-decoration: none;
   color: #1d9b6c;
+  // color: #60CD44;
 }
-.light {
+.landing-navbar-font-specs {
   font-weight: 400;
   font-weight: bold;
+  font-size: 20px;
 }
 
-.navbar-custom {
+.landing-navbar-custom {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
   font-family: 'Lato', 'sans-serif';
   // background-color: black;
 }
-.navbar-custom .navbar-toggle {
-  color: white;
-  background-color: rgba(255, 255, 255, 0.2);
-  font-size: 12px;
+
+.landing-nav-tabs {
+  font-size: 17px;
 }
-.navbar-custom .navbar-toggle:focus,
-.navbar-custom .navbar-toggle:active {
-  outline: none;
-}
-.navbar-custom .navbar-brand {
-  font-weight: 700;
-}
-.navbar-custom .navbar-brand:focus {
-  outline: none;
-}
-.navbar-custom a {
+
+// .navbar-custom .navbar-toggle {
+//   color: white;
+//   background-color: rgba(255, 255, 255, 0.2);
+//   font-size: 12px;
+// }
+// .navbar-custom .navbar-toggle:focus,
+// .navbar-custom .navbar-toggle:active {
+//   outline: none;
+// }
+// .navbar-custom .navbar-brand {
+//   font-weight: 700;
+// }
+// .navbar-custom .navbar-brand:focus {
+//   outline: none;
+// }
+.landing-navbar-custom a {
   color: black;
 }
-.navbar-custom .nav li a {
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-.navbar-custom .nav li a:hover {
+// .navbar-custom .nav li a {
+//   -webkit-transition: background 0.3s ease-in-out;
+//   -moz-transition: background 0.3s ease-in-out;
+//   transition: background 0.3s ease-in-out;
+// }
+.landing-navbar-custom .nav li a:hover {
   color: rgba(255, 255, 255, 0.8);
   outline: none;
   background-color: transparent;
+  color: #60CD44;
 }
-.navbar-custom .nav li a:focus,
-.navbar-custom .nav li a:active {
-  outline: none;
-  background-color: transparent;
-}
-.navbar-custom .nav li.active {
-  outline: none;
-}
-.navbar-custom .nav li.active a {
+// .navbar-custom .nav li a:focus,
+// .navbar-custom .nav li a:active {
+//   outline: none;
+//   background-color: transparent;
+// }
+// .landing-navbar-custom .nav li.active {
+//   outline: none;
+// }
+.landing-navbar-custom .nav li.active a {
   background-color: rgba(255, 255, 255, 0.3);
 }
-.navbar-custom .nav li.active a:hover {
+.landing-navbar-custom .nav li.active a:hover {
   color: white;
 }
 @media (min-width: 768px) {
-  .navbar-custom {
+  .landing-navbar-custom {
     padding: 20px 0;
     border-bottom: none;
     letter-spacing: 1px;
     background: transparent;
-    -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
-    transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    // -webkit-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    // -moz-transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
+    // transition: background 0.5s ease-in-out, padding 0.5s ease-in-out;
   }
-  .navbar-custom.top-nav-collapse {
-    padding: 0;
-    background: black;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-  }
+  // .navbar-custom.top-nav-collapse {
+  //   padding: 0;
+  //   background: black;
+  //   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  // }
 }
+
+// .landing-nav-collapse {
+//   font-size: 14px;
+// }
+
 .landing-intro {
-  display: table;
+  // display: table;
   width: 100%;
   height: auto;
   padding: 100px 0;
   text-align: center;
   color: white;
-  background: url(../img/intro-bg.jpg) no-repeat bottom center scroll;
-  background-color: #60CD44;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  // background-color: #60CD44;
+  background-image: -webkit-linear-gradient(60deg, #60CD44 50%, #EAEAEA 50%);
+
+  // -webkit-background-size: cover;
+  // -moz-background-size: cover;
+  // background-size: cover;
+  // -o-background-size: cover;
   // height: 100vh;
 }
-.intro .intro-body {
-  display: table-cell;
-  vertical-align: middle;
-}
-.intro .intro-body .brand-heading {
-  font-size: 40px;
-}
-.intro .intro-body .intro-text {
-  font-size: 18px;
-}
-@media (min-width: 768px) {
-  .intro {
-    height: 100%;
-    padding: 0;
-  }
-  .intro .intro-body .brand-heading {
-    font-size: 100px;
-  }
-  .intro .intro-body .intro-text {
-    font-size: 26px;
-  }
-}
+// .intro .intro-body {
+//   display: table-cell;
+//   vertical-align: middle;
+// }
+// .intro .intro-body .brand-heading {
+//   font-size: 40px;
+// }
+// .intro .intro-body .intro-text {
+//   font-size: 18px;
+// }
+// @media (min-width: 768px) {
+//   .intro {
+//     height: 100%;
+//     padding: 0;
+//   }
+//   .intro .intro-body .brand-heading {
+//     font-size: 100px;
+//   }
+//   .intro .intro-body .intro-text {
+//     font-size: 26px;
+//   }
+// }
 
 .why-croker-wrapper {
   padding-bottom: 20px;
 }
 
-.btn-circle {
-  width: 70px;
-  height: 70px;
-  margin-top: 15px;
-  padding: 7px 16px;
-  border: 2px solid white;
-  border-radius: 100% !important;
-  font-size: 40px;
-  color: white;
-  background: transparent;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background 0.3s ease-in-out;
-}
-.btn-circle:hover,
-.btn-circle:focus {
-  outline: none;
-  color: white;
-  background: rgba(255, 255, 255, 0.1);
-}
-.btn-circle i.animated {
-  -webkit-transition-property: -webkit-transform;
-  -webkit-transition-duration: 1s;
-  -moz-transition-property: -moz-transform;
-  -moz-transition-duration: 1s;
-}
-.btn-circle:hover i.animated {
-  -webkit-animation-name: pulse;
-  -moz-animation-name: pulse;
-  -webkit-animation-duration: 1.5s;
-  -moz-animation-duration: 1.5s;
-  -webkit-animation-iteration-count: infinite;
-  -moz-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-timing-function: linear;
-}
-@-webkit-keyframes pulse {
-  0% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@-moz-keyframes pulse {
-  0% {
-    -moz-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -moz-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -moz-transform: scale(1);
-    transform: scale(1);
-  }
-}
+// .btn-circle {
+//   width: 70px;
+//   height: 70px;
+//   margin-top: 15px;
+//   padding: 7px 16px;
+//   border: 2px solid white;
+//   border-radius: 100% !important;
+//   font-size: 40px;
+//   color: white;
+//   background: transparent;
+//   -webkit-transition: background 0.3s ease-in-out;
+//   -moz-transition: background 0.3s ease-in-out;
+//   transition: background 0.3s ease-in-out;
+// }
+// .btn-circle:hover,
+// .btn-circle:focus {
+//   outline: none;
+//   color: white;
+//   background: rgba(255, 255, 255, 0.1);
+// }
+// .btn-circle i.animated {
+//   -webkit-transition-property: -webkit-transform;
+//   -webkit-transition-duration: 1s;
+//   -moz-transition-property: -moz-transform;
+//   -moz-transition-duration: 1s;
+// }
+// .btn-circle:hover i.animated {
+//   -webkit-animation-name: pulse;
+//   -moz-animation-name: pulse;
+//   -webkit-animation-duration: 1.5s;
+//   -moz-animation-duration: 1.5s;
+//   -webkit-animation-iteration-count: infinite;
+//   -moz-animation-iteration-count: infinite;
+//   -webkit-animation-timing-function: linear;
+//   -moz-animation-timing-function: linear;
+// }
+// @-webkit-keyframes pulse {
+//   0% {
+//     -webkit-transform: scale(1);
+//     transform: scale(1);
+//   }
+//   50% {
+//     -webkit-transform: scale(1.2);
+//     transform: scale(1.2);
+//   }
+//   100% {
+//     -webkit-transform: scale(1);
+//     transform: scale(1);
+//   }
+// }
+// @-moz-keyframes pulse {
+//   0% {
+//     -moz-transform: scale(1);
+//     transform: scale(1);
+//   }
+//   50% {
+//     -moz-transform: scale(1.2);
+//     transform: scale(1.2);
+//   }
+//   100% {
+//     -moz-transform: scale(1);
+//     transform: scale(1);
+//   }
+// }
 
-.why-croker-wrapper {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
+// .why-croker-top-wrapper {
+//   padding-top: 10px;
+// }
+
+.landing-compo-top-wrapper {
   padding-top: 10px;
 }
 
-.why-croker-container h3 {
-  font-size: 15px;
+
+.landing-compo-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-top: 20px;
+  // height: 100vh;
 }
+
+.landing-compo-container h3 {
+  font-size: 15px;
+  // padding-top: 10px;
+}
+
+// .our-solution-main-wrapper {
+// display: block;
+// height: 100vh;
+// }
+
+// .our-solution-top-wrapper {
+//   padding-top: 10px;
+// }
+
+// .our-solution-wrapper {
+//   // display: flex;
+//   // align-items: center;
+//   // justify-content: center;
+//   // margin: 0 auto;
+//   // flex-direction: row;
+//   display: flex;
+//   justify-content: space-around;
+//   align-items: center;
+//   padding-top: 20px;
+// }
+
+// .our-solution-container h3 {
+//   font-size: 15px;
+//   // display: block;
+//   // padding-top: 10px;
+// }
 
 
 .style_image {
@@ -208,33 +260,44 @@ a:focus {
 }
 
 
-.content-section {
-  padding-top: 10px;
-}
-.download-section {
+.landing-ending {
+  // display: table;
   width: 100%;
-  padding: 50px 0;
+  height: auto;
+  padding: 100px 0;
+  text-align: center;
   color: white;
-  background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
-  background-color: black;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  // background-color: #60CD44;
+  background-image: -webkit-linear-gradient(-120deg, #60CD44 50%, #EAEAEA 50%);
 }
 
-@media (min-width: 767px) {
-  .content-section {
-    padding-top: 250px;
-  }
-  .download-section {
-    padding: 100px 0;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
-  }
-}
+// .content-section {
+//   padding-top: 10px;
+// }
+// .download-section {
+//   width: 100%;
+//   padding: 50px 0;
+//   color: white;
+//   background: url(../img/downloads-bg.jpg) no-repeat center center scroll;
+//   background-color: black;
+//   -webkit-background-size: cover;
+//   -moz-background-size: cover;
+//   background-size: cover;
+//   -o-background-size: cover;
+// }
+
+// @media (min-width: 767px) {
+//   .content-section {
+//     padding-top: 250px;
+//   }
+//   .download-section {
+//     padding: 100px 0;
+//   }
+//   #map {
+//     height: 400px;
+//     margin-top: 250px;
+//   }
+// }
 // .btn {
 //   text-transform: uppercase;
 //   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -244,34 +307,35 @@ a:focus {
 //   transition: all 0.3s ease-in-out;
 //   border-radius: 0;
 // }
-.btn-default {
-  border: 1px solid #42DCA3;
-  color: #42DCA3;
-  background-color: transparent;
-}
-.btn-default:hover,
-.btn-default:focus {
-  border: 1px solid #42DCA3;
-  outline: none;
-  color: black;
-  background-color: #42DCA3;
-}
-ul.banner-social-buttons {
-  margin-top: 0;
-}
-@media (max-width: 1199px) {
-  ul.banner-social-buttons {
-    margin-top: 15px;
-  }
-}
-@media (max-width: 767px) {
-  ul.banner-social-buttons li {
-    display: block;
-    margin-bottom: 20px;
-    padding: 0;
-  }
-  ul.banner-social-buttons li:last-child {
-    margin-bottom: 0;
-  }
-}
+
+// .btn-default {
+//   border: 1px solid #42DCA3;
+//   color: #42DCA3;
+//   background-color: transparent;
+// }
+// .btn-default:hover,
+// .btn-default:focus {
+//   border: 1px solid #42DCA3;
+//   outline: none;
+//   color: black;
+//   background-color: #42DCA3;
+// }
+// ul.banner-social-buttons {
+//   margin-top: 0;
+// }
+// @media (max-width: 1199px) {
+//   ul.banner-social-buttons {
+//     margin-top: 15px;
+//   }
+// }
+// @media (max-width: 767px) {
+//   ul.banner-social-buttons li {
+//     display: block;
+//     margin-bottom: 20px;
+//     padding: 0;
+//   }
+//   ul.banner-social-buttons li:last-child {
+//     margin-bottom: 0;
+//   }
+// }
 
