--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,87 +1,127 @@
-
-<!-- <div class="landing-wrapper"> -->
-  <div class="landing-row-wrapper">
+<div class="landing-row-wrapper">
 
     <!-- Navigation -->
-    <nav class="navbar navbar-custom navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
+  <div class="navbar landing-navbar-custom navbar-fixed-top">
+    <div class="container">
+      <div class="croker-navbar-header">
+          <!-- <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
             Menu <i class="fa fa-bars"></i>
-          </button>
-          <a class="navbar-brand page-scroll" href="#page-top">
-
-            <i class=""></i> <span class="light"><%#= image_tag 'logo.png' %>Croker</span>
-          </a>
-        </div>
-        <div class="collapse navbar-collapse navbar-right navbar-main-collapse">
-          <ul class="nav navbar-nav">
+          </button> -->
+        <a class="navbar-brand page-scroll" href="#page-top">
+          <span class="landing-navbar-font-specs"><%#= image_tag 'logo.png' %>Croker</span>
+        </a>
+      </div>
+      <div class="landing-nav-tabs navbar-collapse navbar-right navbar-main-collapse">
+        <ul class="nav navbar-nav">
             <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
-            <li class="hidden">
-              <a href="#page-top"></a>
-            </li>
-            <li>
-              <a class="page-scroll" href="#about">Why Croker</a>
-            </li>
-            <li>
-              <a class="page-scroll" href="#download">How it works</a>
-            </li>
-            <li>
-              <%= link_to "Login",  new_user_session_path, method: :get, class: "sign-up my-btn" %>
-            </li>
-            <li>
-             <%= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn" %>
-            </li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#why-croker">Why Croker</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="#our-solution">Our Solution</a>
+          </li>
+          <li>
+            <%= link_to "Login",  new_user_session_path, method: :get, class: "sign-up my-btn" %>
+          </li>
+          <li>
+            <%= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn" %>
+          </li>
+        </ul>
       </div>
-      <!-- /.container -->
-    </nav>
+       <!-- /.navbar-collapse -->
+    </div>
+     <!-- /.container -->
+  </div>
 
-    <!-- Intro Header -->
-    <div class="landing-intro">
-      <div class="intro-body">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-              <h1 class="brand-heading">Crypto trading made easy</h1>
-              <p class="intro-text">Croker is your <strong>gateway</strong> into the <strong>cryptosphere</strong>.
-              </p>
-            <!--   <a href="#" class="btn btn-success buy-coins">Sign Up</a>
-            </a> -->
-          </div>
-        </div>
-      </div>
+   <!-- Intro Header -->
+  <div class="landing-intro">
+    <!-- <div class="intro-body"> -->
+    <div class="container">
+        <!-- <div class="row"> -->
+          <!-- <div class="col-md-8 col-md-offset-2"> -->
+      <h1 class="brand-heading">Crypto Trading Made Easy</h1>
+      <p class="intro-text"><strong>Croker</strong> is your <strong>gateway</strong> into the <strong>cryptosphere</strong>.
+      </p>
     </div>
   </div>
 
-  <!-- About Section -->
-  <!-- <div id="why-croker" class="container content-section text-center"> -->
-    <div id="about" class="why-croker-wrapper">
-      <div class="why-croker-container text-center">
-        <h2>Ask yourself...</h2>
-        <p>Calling on crypto newbies and veterans alike</p>
-      </div>
+        <!-- About Section -->
+  <div id="why-croker" class="landing-compo-top-wrapper">
+    <div class="landing-compo-top-container text-center">
+      <h2>Ask Yourself...</h2>
+      <p>Calling on crypto newbies and veterans alike</p>
     </div>
+  </div>
 
-    <div class="why-croker-wrapper">
-      <div class="why-croker-container">
-       <h3>Are you tired of confusing trading platforms?</h3>
-       <%= image_tag 'confusion.png', :class => "style_image" %>
-     </div>
-     <div class="why-croker-container">
-      <h3>Is this your first time investing?</h3>
-       <%= image_tag 'planting.png', :class => "style_image" %>
+  <div class="landing-compo-wrapper">
+    <div class="landing-compo-container">
+      <%= image_tag 'confusion.png', :class => "style_image" %>
+      <h3>Are you tired of confusing trading platforms?</h3>
     </div>
-    <div class="why-croker-container">
+    <div class="landing-compo-container">
+      <%= image_tag 'planting.png', :class => "style_image" %>
+        <h3>Is this your first time investing?</h3>
+    </div>
+    <div class="landing-compo-container">
+      <%= image_tag 'search.png', :class => "style_image" %>
       <h3>Are you searching for a simple interface?</h3>
-       <%= image_tag 'search.png', :class => "style_image" %>
     </div>
   </div>
 
+          <!-- <div class="our-solution-main-wrapper"> -->
+  <div id="our-solution" class="landing-compo-top-wrapper">
+    <div class="landing-compo-top-container text-center">
+      <h2>Our Solution</h2>
+      <p>We strive to meet your needs</p>
+    </div>
+  </div>
+
+  <div class="landing-compo-wrapper">
+    <div class="landing-compo-container">
+      <%= image_tag 'bitcoin-landing.png', :class => "style_image" %>
+      <h3>Buy and sell instantaneously the top 30 cryptos</h3>
+    </div>
+    <div class="landing-compo-container">
+      <%= image_tag 'landing-portfolio-icon.png', :class => "style_image" %>
+      <h3>Manage your portfolio from a simple dashboard</h3>
+    </div>
+    <div class="landing-compo-container">
+      <%= image_tag 'landing-dollar.png', :class => "style_image" %>
+      <h3>Only USD denominated pairs</h3>
+    </div>
+  </div>
+
+  <div id="our-solution" class="landing-compo-top-wrapper">
+    <div class="landing-compo-top-container text-center">
+      <h2>Launch into the cryptosphere within minutes</h2>
+      <p>We strive to meet your needs</p>
+    </div>
+  </div>
+
+  <div class="landing-compo-wrapper">
+    <div class="landing-compo-container">
+      <%= image_tag 'user-verfied.png', :class => "style_image" %>
+      <h3>Create your account</h3>
+    </div>
+    <div class="landing-compo-container">
+      <%= image_tag 'landing-credit-card.png', :class => "style_image" %>
+      <h3>Link your credit card</h3>
+    </div>
+    <div class="landing-compo-container">
+      <%= image_tag 'landing-rocket.png', :class => "style_image" %>
+      <h3>Reach for the Moon</h3>
+    </div>
+  </div>
+
+  <div class="landing-ending">
+    <div class="container">
+      <h1>Ready to fill your crypto bags?</h1>
+      <h2 class="intro-text">Get started with as little as $20</h2>
+      <%= link_to "Sign Up", new_user_registration_path, class: "sign-up my-btn" %>
+    </div>
+  </div>
 
 </div>
-
-
-
