--- a/app/views/devise/shared/_facebook_login.html.erb
+++ b/app/views/devise/shared/_facebook_login.html.erb
@@ -1,5 +1,1 @@
-<%- if devise_mapping.omniauthable? %>
-  <%- resource_class.omniauth_providers.each do |provider| %>
-    <%= link_to "Sign in with #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider), class: 'fb-login-button', "data-max-rows" => "1", "data-size" => "medium", "data-button-type" => "login_with", "data-show-faces" => "false", "data-auto-logout-link" => "false", "data-use-continue-as" => "false"%><br />
-  <% end -%>
-<% end -%>
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: 'fb-login-button', id: "face-button", "data-max-rows" => "1", "data-size" => "medium", "data-button-type" => "login_with", "data-show-faces" => "false", "data-auto-logout-link" => "false", "data-use-continue-as" => "false"%><br />
