fixed facebook login again

--- a/app/views/devise/shared/_facebook_login.html.erb
+++ b/app/views/devise/shared/_facebook_login.html.erb
@@ -1,1 +1,1 @@
-<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path, class: 'fb-login-button', id: "face-button", "data-max-rows" => "1", "data-size" => "medium", "data-button-type" => "login_with", "data-show-faces" => "false", "data-auto-logout-link" => "false", "data-use-continue-as" => "false"%><br />
+<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path%><br />
