facebook button styling Deleted facebook's javascript to construct the login button and created my one button with html and css

--- a/app/views/devise/shared/_facebook_login.html.erb
+++ b/app/views/devise/shared/_facebook_login.html.erb
@@ -1,1 +1,6 @@
-<%= link_to "Sign in with Facebook", user_facebook_omniauth_authorize_path%><br />
+<%= link_to user_facebook_omniauth_authorize_path do %>
+  <div class= "btn btn-primary facebook-login-button">
+    <i class="fab fa-facebook-f"></i>
+    <p>Sign in with Facebook</p>
+  </div>
+<% end %>
